# mpMap2

./: .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  DESCRIPTION.in  NAMESPACE  README.md  configure.ac
R/: Pillai.R  Rcpp_exceptions.R  addExtraMarker.R  addExtraMarkerFromRawCall.R  addExtraMarkers.R  additionOperators.R  as.mpInterval.R  assignFounderPattern.R  assignFounderPatternPrototype.R  backcrossPedigree.R  biparentalDominant.R  callFromMap.R  canSkipValidity.R  changeMarkerPosition.R  classes.R  combineKeepRF.R  combinedGenotypes.R  compressedMatrix.R  compressedProbabilities.R  computeAllEpistaticChiSquared.R  computeGenotypeProbabilities.R  createSNPTemplate.R  detailedPedigree-class.R  eightWayPedigreeImproperFunnels.R  eightWayPedigreeRandomFunnels.R  eightWayPedigreeSingleFunnel.R  estimateMap.R  estimateMapFromImputation.R  estimateRF.R  estimateRFSingleDesign.R  estimateRf.R  expand.R  expandedProbabilities.R  exportMapToPretzl.R  extraImputationPoints.R  f2Pedigree.R  finals.R  fixedNumberOfFounderAlleles.R  formGroups.R  founders.R  (+67 more)
data/: callFromMapExampleLocalisationStatistics.RData  simulatedFourParentData.RData  wsnp_Ku_rep_c103074_89904851.RData
inst/generateDatasets/: generateExample1.R
inst/include/: alleleDataErrors.h  checkHets.h  crc32.h  estimateRF.h  estimateRFCheckFunnels.h  estimateRFSpecificDesign.h  estimateRf.h  estimateRfCheckFunnels.h  estimateRfSpecificDesign.h  funnelsToUniqueValues.h  generateGenotypes.h  getAllowableMarkerPatterns.h  getFunnel.h  intercrossingGenerations.h  markerPatternsToUniqueValues.h  matrixChunks.h  rawSymmetricMatrix.h  recodeFoundersFinalsHets.h  sortPedigreeLineNames.h  unitTypes.hpp
inst/mathematica/: finiteSelfingIntercrossing16Way.nb  finiteSelfingIntercrossing16Way.states  finiteSelfingIntercrossing4Way.nb  finiteSelfingIntercrossing4WaySingleFunnel.nb  finiteSelfingIntercrossing8Way.nb  finiteSelfingIntercrossing8WaySingleFunnel.nb  finiteSelfingIntercrossing8WaySinglePoint.nb  finiteSelfingIntercrossingF2.nb
man/: addExtraMarkerFromRawCall.Rd  addExtraMarkers.Rd  as.mpInterval.Rd  assignFounderPattern.Rd  backcrossPedigree.Rd  biparentalDominant.Rd  callFromMap.Rd  callFromMapExampleLocalisationStatistics.Rd  changeMarkerPosition.Rd  clusterOrderCross.Rd  combineKeepRF.Rd  combineMpcross.Rd  computeAllEpistaticChiSquared.Rd  computeGenotypeProbabilities.Rd  detailedPedigree-class.Rd  eightParentPedigreeImproperFunnels.Rd  eightParentPedigreeRandomFunnels.Rd  eightParentPedigreeSingleFunnel.Rd  eightParentSubsetMap.Rd  eightWayExampleData.Rd  estimateMap.Rd  estimateMapFromImputation.Rd  estimateRF.Rd  estimateRFSingleDesign.Rd  existingLocalisationStatistics.Rd  expand.Rd  exportMapToPretzl.Rd  extraImputationPoints.Rd  f2Pedigree.Rd  finalNames.Rd  finals.Rd  fixedNumberOfFounderAlleles-class.Rd  fixedNumberOfFounderAlleles.Rd  flatImputationMapNames.Rd  formGroups.Rd  founderNames.Rd  founders.Rd  fourParentPedigreeRandomFunnels.Rd  fourParentPedigreeSingleFunnel.Rd  fromMpMap.Rd  (+68 more)
src/: .gitignore  CMakeLists.txt  FindR.cmake  Makefile.in  Makevars  Makevars.in  Makevars.win  alleleDataErrors.cpp  alleleDataErrors.h  array2.h  arsa.cpp  arsa.h  arsaRaw.cpp  arsaRaw.h  arsaRawREntryPoint.cpp  arsaRawREntryPoint.h  assignFounderPattern.cpp  assignFounderPattern.h  checkHets.cpp  checkHets.h  checkImputedBounds.cpp  checkImputedBounds.h  combineGenotypes.cpp  combineGenotypes.h  combineRFDisjoint.cpp  combineRFDisjoint.h  compressedProbabilities.cpp  compressedProbabilities.h  compressedProbabilities_RInterface.cpp  compressedProbabilities_RInterface.h  computeAllEpistaticChiSquared.cpp  computeAllEpistaticChiSquared.h  computeGenotypeProbabilities.cpp  computeGenotypeProbabilities.h  constructLookupTable.h  constructLookupTable.hpp  convertGeneticData.cpp  convertGeneticData.h  crc32.cpp  crc32.h  (+159 more)
tests/: testthat.R
tests/slow/: test-addExtraMarkers.R  test-computeAllEpistaticChiSquared.R  test-computeGenotypeProbabilities2ParentFiniteWithErrors.R  test-computeGenotypeProbabilities4ParentFiniteNoErrors.R  test-computeGenotypeProbabilities8ParentFinite.R  test-eightParentPedigreeRandomFunnels.R  test-estimateRf16Parent.R  test-estimateRf2Parent.R  test-estimateRf4Parent.R  test-estimateRf8Parent.R  test-estimateRf8ParentImproper.R  test-estimateRfBackcross.R  test-estimateRfSingle8Parent.R  test-order.R
tests/testthat/: test-addExtraMarkerFromRawCall.R  test-addExtraMarkers.R  test-addMpcross.R  test-addMpcrossRf.R  test-approximatelyUninformative8.R  test-arsaRaw.R  test-as.mpInterval4Parent.R  test-as.mpInterval8Parent.R  test-assignFounderPatternPrototype.R  test-backcrossPedigree.R  test-biparentalDominant.R  test-changeMarkerPosition.R  test-combineGenotypes.R  test-combineKeepRF.R  test-combinedEstimateRf2Parent.R  test-computeGenotypeProbabilities2ParentFinite.R  test-computeGenotypeProbabilities2ParentFiniteNoErrors.R  test-computeGenotypeProbabilities2ParentFiniteWithErrors.R  test-computeGenotypeProbabilities2ParentInfinite.R  test-computeGenotypeProbabilities2ParentInfiniteNoErrors.R  test-computeGenotypeProbabilities2ParentInfiniteWithErrors.R  test-computeGenotypeProbabilities4ParentFinite.R  test-computeGenotypeProbabilities4ParentFiniteNoErrors.R  test-computeGenotypeProbabilities4ParentFiniteWithErrors.R  test-computeGenotypeProbabilities4ParentInfinite.R  test-computeGenotypeProbabilities8ParentFinite.R  test-computeGenotypeProbabilities8ParentInfinite.R  test-constructLookupTable.R  test-countValuesToEstimate.R  test-detailedPedigree.R  test-detailedPedigreeValidation.R  test-dspMatrix.R  test-eightParentPedigreeImproperFunnels.R  test-eightParentPedigreeRandomFunnels.R  test-eightParentPedigreeSingleFunnel.R  test-estimateMap.R  test-estimateMapFromImputation.R  test-estimateRFInternal.R  test-estimateRf.R  test-estimateRf2Parent.R  (+79 more)
vignettes/: mpMap2.Rnw  mpMap2.bib
